--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,15 @@ jobs:
       - name: Update the zip file by adding app folder
         run: |
           (cd app/; zip ../aws_lambda_artifacts.zip -r .); ls
-      
+
+      - name: Verify AWS CLI
+        run: |
+          aws --version
+          aws configure list
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Upload to S3
         run: |
           aws s3 cp aws_lambda_artifacts.zip s3://${{ secrets.AWS_S3_BUCKET }}/
