--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,13 +33,16 @@ jobs:
         run: |
           aws --version
           aws configure list
+          echo ${{ secrets.AWS_ACCESS_KEY_ID }}
+          echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          echo ${{ secrets.AWS_S3_BUCKET }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Upload to S3
         run: |
-          aws s3 cp aws_lambda_artifacts.zip s3://${{ secrets.AWS_S3_BUCKET }}/
+          aws s3 cp aws_lambda_artifacts.zip s3://${{ secrets.AWS_S3_BUCKET }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
