--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,21 +27,20 @@ jobs:
 
       - name: Update the zip file by adding app folder
         run: |
-          (cd app/; zip ../aws_lambda_artifacts.zip -r .); ls
+          (cd app/; zip ../aws_lambda_artifacts.zip -r .)
+          ls -l
 
       - name: Verify AWS CLI
         run: |
-          echo ${{ secrets.AWS_ACCESS_KEY_ID }}
-          echo ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          echo ${{ secrets.AWS_S3_BUCKET }}
           aws --version
+          aws configure list
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Upload to S3
         run: |
-          aws s3 cp aws_lambda_artifacts.zip s3://${{ secrets.AWS_S3_BUCKET }}
+          aws s3 cp aws_lambda_artifacts.zip s3://${{ secrets.AWS_S3_BUCKET }} --debug
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
