--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,9 +12,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@master
 
-      - name: Install AWS CLI
+      - name: Update
         run: |
           sudo apt-get update
+
+      - name: Install AWS CLI
+        run: |
           sudo apt-get install -y awscli
 
       - name: Create depedndencies folder
