--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,16 +30,9 @@ jobs:
           (cd app/; zip ../aws_lambda_artifacts.zip -r .)
           ls -l
 
-      - name: Version check
+      - name: Set AWS Region
         run: |
-          aws --version
-
-      - name: Verify AWS CLI
-        run: |
-          aws configure list
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          echo "export AWS_DEFAULT_REGION=eu-north-1" >> $GITHUB_ENV
 
       - name: Upload to S3
         run: |
